<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.0.4</version>
        <relativePath/>
        <!-- lookup parent from repository -->
    </parent>
    <groupId>per.nonlone</groupId>
    <artifactId>s2dd</artifactId>
    <version>1.1.1</version>
    <name>s2dd</name>
    <description>Simple To Debug Dubbo</description>

    <properties>
        <java.version>17</java.version>
        <dubbo.version>3.2.2</dubbo.version>
    </properties>


    <profiles>
        <profile>
            <id>native</id>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <configuration>
                            <release>17</release>
                            <fork>true</fork>
                            <verbose>true</verbose>
                            <compilerArguments>

                            </compilerArguments>
                            <compilerArgs>
                                <arg>
                                    --add-opens java.base/java.lang=ALL-UNNAMED
                                    --add-opens java.base/java.io=ALL-UNNAMED
                                    --add-opens java.base/java.math=ALL-UNNAMED
                                    --add-opens java.base/java.net=ALL-UNNAMED
                                    --add-opens java.base/java.nio=ALL-UNNAMED
                                    --add-opens java.base/java.security=ALL-UNNAMED
                                    --add-opens java.base/java.text=ALL-UNNAMED
                                    --add-opens java.base/java.time=ALL-UNNAMED
                                    --add-opens java.base/java.util=ALL-UNNAMED
                                    --add-opens java.base/jdk.internal.access=ALL-UNNAMED
                                    --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
                                </arg>
                            </compilerArgs>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.springframework.boot</groupId>
                        <artifactId>spring-boot-maven-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>process-aot</id>
                                <goals>
                                    <goal>process-aot</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <!--<version>0.9.22</version>-->
                        <configuration>
                            <classesDirectory>${project.build.outputDirectory}</classesDirectory>
                            <metadataRepository>
                                <enabled>true</enabled>
                            </metadataRepository>
                            <requiredVersion>22.3</requiredVersion>
                            <mainClass>per.nonlone.suck2dubbo.Application</mainClass>
                            <buildArgs>
                                <buildArg>-H:+ReportUnsupportedElementsAtRuntime</buildArg>
                                <buildArg>-H:TraceClassInitialization=true </buildArg>
                                <buildArg>
                                    --no-fallback

                                    --initialize-at-build-time=org.slf4j.MDC
                                    --initialize-at-build-time=org.apache.log4j.MDC
                                    --initialize-at-build-time=org.slf4j.LoggerFactory
                                    --initialize-at-build-time=org.slf4j.impl.StaticLoggerBinder
                                    --initialize-at-build-time=org.apache.log4j.helpers.Loader
                                    --initialize-at-build-time=org.apache.log4j.Logger
                                    --initialize-at-build-time=org.apache.log4j.helpers.LogLog
                                    --initialize-at-build-time=org.apache.log4j.LogManager
                                    --initialize-at-build-time=org.apache.log4j.spi.LoggingEvent
                                    --initialize-at-build-time=org.slf4j.impl.Log4jLoggerFactory
                                    --initialize-at-build-time=org.slf4j.impl.Log4jLoggerAdapter
                                    --initialize-at-build-time=org.eclipse.collections.api.factory.Sets
                                    --initialize-at-build-time=io.netty.util.internal.logging.Log4JLogger


                                    --initialize-at-run-time=io.netty.channel.epoll.Epoll
                                    --initialize-at-run-time=io.netty.channel.epoll.Native
                                    --initialize-at-run-time=io.netty.channel.epoll.EpollEventLoop
                                    --initialize-at-run-time=io.netty.channel.epoll.EpollEventArray
                                    --initialize-at-run-time=io.netty.channel.DefaultFileRegion
                                    --initialize-at-run-time=io.netty.channel.kqueue.KQueueEventArray
                                    --initialize-at-run-time=io.netty.channel.kqueue.KQueueEventLoop
                                    --initialize-at-run-time=io.netty.channel.kqueue.Native
                                    --initialize-at-run-time=io.netty.channel.unix.Errors
                                    --initialize-at-run-time=io.netty.channel.unix.IovArray
                                    --initialize-at-run-time=io.netty.channel.unix.Limits
                                    --initialize-at-run-time=io.netty.channel.unix.Socket
                                    --initialize-at-run-time=io.netty.channel.ChannelHandlerMask
                                    --initialize-at-run-time=io.netty.internal.tcnative.CertificateVerifier
                                    --initialize-at-run-time=io.netty.internal.tcnative.AsyncSSLPrivateKeyMethod
                                    --initialize-at-run-time=io.netty.handler.ssl.ReferenceCountedOpenSslEngine
                                    --initialize-at-run-time=io.netty.handler.ssl.OpenSslPrivateKeyMethod
                                    --initialize-at-run-time=io.netty.internal.tcnative.CertificateVerifier
                                    --initialize-at-run-time=io.netty.internal.tcnative.SSL
                                    --initialize-at-run-time=io.netty.handler.ssl.OpenSslAsyncPrivateKeyMethod
                                    --initialize-at-run-time=io.netty.internal.tcnative.SSLPrivateKeyMethod

                                    --report-unsupported-elements-at-runtime
                                    --allow-incomplete-classpath
                                    --enable-url-protocols=http
                                    -H:+ReportExceptionStackTraces
                                    -H:+AllowJRTFileSystem
                                </buildArg>
                            </buildArgs>
                        </configuration>
                        <executions>
                            <execution>
                                <id>add-reachability-metadata</id>
                                <goals>
                                    <goal>add-reachability-metadata</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.dubbo</groupId>
                        <artifactId>dubbo-maven-plugin</artifactId>
                        <version>${dubbo.version}</version>
                        <configuration>
                            <mainClass>per.nonlone.suck2dubbo.Application</mainClass>
                        </configuration>
                        <executions>
                            <execution>
                                <phase>process-sources</phase>
                                <goals>
                                    <goal>dubbo-process-aot</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.alibaba.nacos</groupId>
            <artifactId>nacos-client</artifactId>
            <version>1.3.3</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api -->
        <dependency>
            <groupId>javax.annotation</groupId>
            <artifactId>javax.annotation-api</artifactId>
            <version>1.3.2</version>
        </dependency>


        <dependency>
            <groupId>org.apache.dubbo</groupId>
            <artifactId>dubbo</artifactId>
            <version>${dubbo.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.dubbo</groupId>
            <artifactId>dubbo-config-spring</artifactId>
            <version>${dubbo.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.dubbo</groupId>
            <artifactId>dubbo-native</artifactId>
            <version>${dubbo.version}</version>
        </dependency>

    </dependencies>

    <build>
        <finalName>s2dd</finalName>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>17</release>
                    <fork>true</fork>
                    <verbose>true</verbose>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

</project>
